# tic-tac-toe-rl

./: .gitignore  README.md  c_tictactoe.py  c_tictactoe.pyx  env.py  env_batched1.py  env_cupy.py  env_jax.py  env_simple.py  leanrl.py  main.py  mojo_tictactoe.mojo  pixi.toml  pyproject.toml  setup.py  test.ipynb
envs/: c_tictactoe.py  c_tictactoe.pyx  c_tictactoe_py.py  check_win_bench.ipynb  dqn_test_cython.ipynb  env.py  env_3x3.py  env_batched.py  env_cupy.py  env_jax.ipynb  env_jax.py  env_jax_helper.py  env_julia.jl  pqn_test_cython.ipynb
go/: env.go
julia/: env.jl
julia/example/: flux_example.jl
mojo/: mojo_tictactoe.mojo
pvp/: c_tictactoe_pvp.pyx  c_tictactoe_pvp_py.py  c_tictactoe_pvp_test.py  pqn_pvp_cython.ipynb
python/: main.py
python/ttt/cython/: c_tictactoe.pyx  c_tictactoe_pvp.pyx
python/ttt/envs/: c_tictactoe_py.py  env_bit.py  env_cupy.py  env_jax_helper.py
python/ttt/examples/: leanrl.py
python/ttt/pvp/: c_tictactoe_pvp_py.py
python/ttt/scripts/: check_win_bench.ipynb  dqn_test_cython.ipynb  pqn_pvp_cython.ipynb  pqn_test_cython.ipynb  test.ipynb
rust/: Cargo.toml
rust/burn/: Cargo.toml
rust/candle/: Cargo.toml
rust/env/: Cargo.toml
rust/env/src/: lib.rs
rust/python_bindings/: Cargo.toml
rust/python_bindings/src/: lib.rs
rust/tch/: Cargo.toml
zig/: main.zig
