[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-rl"
version = "0.1.0"
description = "Playing around with reinforcement learning in tic-tac-toe"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.2.5",
    "numba>=0.60.0",
    "tqdm>=4.66.6",
    "cython>=3.0.11",
    "gymnasium>=1.0.0",
    "sympy>=1.13.1",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "maturin>=1.8.2",
]

[project.optional-dependencies]
cu124 = ["torch>=2.5.1", "torchvision>=0.20.1"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", extra = "cu124" }]
torchvision = [{ index = "pytorch-cu124", extra = "cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["ttt*"]

[tool.setuptools.package-dir]
"" = "python"
