[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-rl"
version = "0.1.0"
description = "Playing around with reinforcement learning in tic-tac-toe"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab",
    "numba>=0.64.0",
    "tqdm",
    "cython",
    "gymnasium>=1.2.3",
    "matplotlib",
    "pytest",
    "maturin",
    "torch>=2.10.0",
]

[project.optional-dependencies]
cu130 = ["torch>=2.10.0", "torchvision>=0.20.1"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", extra = "cu130" }]
torchvision = [{ index = "pytorch-cu130", extra = "cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["ttt*"]

[tool.setuptools.package-dir]
"" = "python"
